Create a fixed number of processes to run simulations in parallel, instead of creating a new process for each simulation